commit translated contents

--- a/docs/docs-ref-autogen/office/office.addincommands.event.yml
+++ b/docs/docs-ref-autogen/office/office.addincommands.event.yml
@@ -5,7 +5,9 @@ items:
     remarks: |-
       有关详细支持信息, 请参阅[外接程序命令要求集](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/add-in-commands-requirement-sets)。
 
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限的**[适用 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
     name: Office.AddinCommands.Event
     fullName: Office.AddinCommands.Event
     langs:
@@ -25,7 +27,9 @@ items:
 
       \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限的**[适用 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
 
       邮箱1.3 没有参数, `options`而邮箱预览不支持`options`参数。
 
