--- a/docs/docs-ref-autogen/office/office.context.yml
+++ b/docs/docs-ref-autogen/office/office.context.yml
@@ -45,7 +45,7 @@ items:
 
       `commerceAllowed`仅在 Office for iPad 上受支持。
 
-      iOS 应用商店不支持提供其他付款系统的链接的应用程序和外接程序。 但是, 在浏览器中运行的 office 外接程序或 office Online 在浏览器中确实允许这样的链接。 如果您希望外接程序的 UI 在非 iOS 平台上提供到外部付款系统的链接, 则可以使用 commerceAllowed 属性来控制该链接的显示时间。
+      iOS 应用商店不支持提供其他付款系统的链接的应用程序和外接程序。 但是, 在浏览器中运行的 Office 外接程序或 Office Online 在浏览器中确实允许这样的链接。 如果您希望外接程序的 UI 在非 iOS 平台上提供到外部付款系统的链接, 则可以使用 commerceAllowed 属性来控制该链接的显示时间。
     name: commerceAllowed
     fullName: commerceAllowed
     langs:
@@ -61,13 +61,13 @@ items:
     remarks: |-
       值反映在 Office 主机应用程序中使用**文件&gt;选项&gt;语言**指定的**编辑语言**设置。 `contentLanguage`
 
-      在 Access web 应用程序的内容外接程序中`contentLanguage` , 该属性获取外接程序区域性 (例如, "en-GB")。
+      在 Access web 应用程序的内容外接程序中`contentLanguage` , 该属性获取外接程序区域性 (例如, "EN-GB")。
 
       **支持详细信息**
 
       下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此属性。 空的单元格表示相应的 Office 主机应用程序不支持此枚举。
 
-      有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
+      有关 Office 主机应用程序和服务器要求的详细信息, 请参阅[运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
       *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> 适用于设备的 OWA </th><th> Office for Mac </th></tr> <tr><td><strong>访问</strong></td><td> </td><td> Y </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> </table>
 
@@ -127,7 +127,7 @@ items:
 
       下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此属性。 空的单元格表示相应的 Office 主机应用程序不支持此枚举。
 
-      有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
+      有关 Office 主机应用程序和服务器要求的详细信息, 请参阅[运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
       *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> 适用于设备的 OWA </th><th> Office for Mac </th></tr> <tr><td><strong>访问</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> </td><td> Y </td><td> </td><td> </td></tr> </table>
 
@@ -221,7 +221,9 @@ items:
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/javascript-api-for-office)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限的**[适用 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
 
       **命名空间**:
 
@@ -307,7 +309,10 @@ items:
       RoamingSettings 对象使您可以存储和访问存储在用户邮箱中的邮件外接程序的数据, 以便在该加载项从用于访问该邮箱的任何主机客户端应用程序中运行时, 可以使用该加载项。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/javascript-api-for-office)\]
-    remarks: '**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限的**[适用 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读'
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
     name: roamingSettings
     fullName: roamingSettings
     langs:
@@ -325,7 +330,7 @@ items:
 
       `touchEnabled`仅在 Office for iPad 上受支持。
 
-      使用 context.touchenabled 属性可确定外接程序何时在触摸设备上运行, 并在必要时调整控件的种类, 以及外接程序 UI 中的元素的大小和间距, 以适应触摸交互。
+      使用 Context.touchenabled 属性可确定外接程序何时在触摸设备上运行, 并在必要时调整控件的种类, 以及外接程序 UI 中的元素的大小和间距, 以适应触摸交互。
     name: touchEnabled
     fullName: touchEnabled
     langs:
