--- a/docs/docs-ref-autogen/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook/office.mailbox.yml
@@ -644,7 +644,7 @@ items:
           type:
             - '(asyncResult: Office.AsyncResult<string>) => void'
         - id: userContext
-          description: 可选。 传递给异步方法的任何状态数据。\|
+          description: 可选。 传递给异步方法的任何状态数据。
           type:
             - any
   - uid: outlook.Office.Mailbox.makeEwsRequestAsync
