--- a/docs/docs-ref-autogen/outlook_1_1/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.mailbox.yml
@@ -41,7 +41,7 @@ items:
 
       Outlook 或 Outlook Web App 邮件应用程序的日期和时间可以使用不同的时区。Outlook 使用客户端计算机时区；Outlook Web App 使用 Exchange 管理中心 (EAC) 中设置的时区。应对日期和时间值进行处理，以便用户界面上显示的值始终与用户预期的时区一致。
 
-      如果邮件应用程序在 Outlook 中运行, 则 convertToLocalClientTime 方法将返回一个 dictionary 对象, 并将值设置为客户端计算机时区。 如果邮件应用程序在 Outlook Web app 中运行, 则 convertToLocalClientTime 方法将返回一个 dictionary 对象, 其中的值设置为 EAC 中指定的时区。
+      如果邮件应用程序在 Outlook 中运行, 则 convertToLocalClientTime 方法将返回一个 dictionary 对象, 并将值设置为客户端计算机时区。 如果邮件应用程序在 Outlook Web App 中运行, 则 convertToLocalClientTime 方法将返回一个 dictionary 对象, 其中的值设置为 EAC 中指定的时区。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -68,7 +68,7 @@ items:
     summary: |-
       从包含时间信息的字典中获取 Date 对象。
 
-      convertToUtcClientTime 方法将包含本地日期和时间的字典转换为带有本地日期和时间的正确值的 date 对象。
+      ConvertToUtcClientTime 方法将包含本地日期和时间的字典转换为带有本地日期和时间的正确值的 Date 对象。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -95,7 +95,7 @@ items:
     summary: |-
       显示现有日历约会。
 
-      displayAppointmentForm 方法打开桌面的新窗口中或移动设备对话框中的现有日历约会。
+      DisplayAppointmentForm 方法打开桌面的新窗口中或移动设备对话框中的现有日历约会。
 
       在 Outlook for Mac 中，您可以使用此方法来显示不属于定期系列的单个约会，或显示定期系列的主约会，但无法显示该系列的实例。这是因为在 Outlook for Mac 中，无法访问定期系列实例的属性（包括项目 ID）。
 
@@ -103,7 +103,7 @@ items:
 
       如果指定的项标识符没有识别现有约会，将在客户端计算机或设备上打开一个空白窗格，并且不会返回错误消息。
 
-      **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
+      **注意**: Outlook for IOS 或 Outlook for Android 中不支持此方法。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -136,7 +136,7 @@ items:
     summary: |-
       显示现有邮件。
 
-      displayMessageForm 方法打开桌面的新窗口中或移动设备对话框中的现有邮件。
+      DisplayMessageForm 方法打开桌面的新窗口中或移动设备对话框中的现有邮件。
 
       在 Outlook Web App 中，此方法仅在窗体正文小于或等于 32 KB 字符数时，才会打开指定的窗体。
 
@@ -144,7 +144,7 @@ items:
 
       请勿将 displayMessageForm 与代表约会的 itemId 一起使用。 使用 displayAppointmentForm 方法显示现有约会, 并 displayNewAppointmentForm 显示创建新约会的窗体。
 
-      **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
+      **注意**: Outlook for IOS 或 Outlook for Android 中不支持此方法。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -177,15 +177,15 @@ items:
     summary: |-
       显示用于新建日历约会的表单。
 
-      displayNewAppointmentForm 方法打开一个窗体, 使用户可以创建新的约会或会议。 如果指定了参数，将使用参数的内容自动填充约会窗体字段。
+      DisplayNewAppointmentForm 方法打开一个窗体, 使用户可以创建新的约会或会议。 如果指定了参数，将使用参数的内容自动填充约会窗体字段。
 
       在 Outlook Web App 和适用于设备的 OWA 中，此方法始终显示包含与会者字段的窗体。 如果你未将任何与会者指定为输入参数，该方法将显示为一个包含“保存”按钮的窗体。 如果已指定与会者，窗体将包含与会者和“发送”按钮。
 
-      在 Outlook 富客户端和 outlook RT 中, 如果您在 requiredAttendees、optionalAttendees 或 resources 参数中指定了任何与会者或资源, 则此方法显示带有 "发送" 按钮的会议窗体。 如果不指定任何收件人, 此方法将显示带有 "保存&amp;关闭" 按钮的约会窗体。
+      在 Outlook 富客户端和 Outlook RT 中, 如果您在 requiredAttendees、optionalAttendees 或 resources 参数中指定了任何与会者或资源, 则此方法显示带有 "发送" 按钮的会议窗体。 如果不指定任何收件人, 此方法将显示带有 "保存&amp;关闭" 按钮的约会窗体。
 
       如果任何参数超过指定大小限制，或者指定了未知参数名称，则会引发异常。
 
-      **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
+      **注意**: Outlook for IOS 或 Outlook for Android 中不支持此方法。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -240,7 +240,7 @@ items:
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
 
-      getUserIdentityTokenAsync 方法返回一个令牌, 可用于[通过第三方系统识别和验证外接程序和用户](https://docs.microsoft.com/outlook/add-ins/authentication)<!-- -->.
+      GetUserIdentityTokenAsync 方法返回一个令牌, 可用于[通过第三方系统识别和验证外接程序和用户](https://docs.microsoft.com/outlook/add-ins/authentication)<!-- -->.
 
       #### <a name="examples"></a>示例
 
@@ -270,16 +270,16 @@ items:
           type:
             - '(asyncResult: Office.AsyncResult<string>) => void'
         - id: userContext
-          description: 可选。 传递给异步方法的任何状态数据。\|
+          description: 可选。 传递给异步方法的任何状态数据。
           type:
             - any
   - uid: Outlook_1_1.Office.Mailbox.makeEwsRequestAsync
     summary: |-
-      向承载用户邮箱的 exchange 服务器上的 exchange Web 服务 (EWS) 服务发出异步请求。
+      向承载用户邮箱的 Exchange 服务器上的 Exchange Web 服务 (EWS) 服务发出异步请求。
 
       在这些情况下，加载项应该使用 REST API 来改为访问用户的邮箱。
 
-      makeEwsRequestAsync 方法代表外接程序将 EWS 请求发送到 Exchange。
+      MakeEwsRequestAsync 方法代表外接程序将 EWS 请求发送到 Exchange。
 
       您不能使用 makeEwsRequestAsync 方法请求与文件夹相关联的项目。
 
@@ -291,7 +291,7 @@ items:
 
       **注意**: 在以下情况下, 不支持此方法:
 
-      - 在 outlook for iOS 或 outlook for Android 中。
+      - 在 Outlook for iOS 或 Outlook for Android 中。
 
       - 将加载项加载到 Gmail 邮箱中时。
 
@@ -384,9 +384,9 @@ items:
 
       包含以下成员:
 
-      - hostName (string): 一个表示主机应用程序的名称的字符串。 它是以下值之一: outlook、Mac outlook、OutlookIOS 或 OutlookWebApp。
+      - hostName (string): 一个表示主机应用程序的名称的字符串。 它是以下值之一: Outlook、Mac Outlook、OutlookIOS 或 OutlookWebApp。
 
-      - diagnostics.hostversion (字符串): 表示主机应用程序或 Exchange Server 的版本的字符串。 如果邮件外接程序在 outlook 桌面客户端或 outlook for iOS 上运行, 则 diagnostics.hostversion 属性返回主机应用程序 (Outlook) 的版本。 在 Outlook Web App 中，该属性返回 Exchange Server 的版本。 例如, 字符串15.0.468.0。
+      - Diagnostics.hostversion (字符串): 表示主机应用程序或 Exchange Server 的版本的字符串。 如果邮件外接程序在 Outlook 桌面客户端或 Outlook for iOS 上运行, 则 Diagnostics.hostversion 属性返回主机应用程序 (Outlook) 的版本。 在 Outlook Web App 中，该属性返回 Exchange Server 的版本。 例如, 字符串15.0.468.0。
 
       - OWAView (MailboxEnums 或 string): 表示 Outlook Web App 的当前视图的枚举 (或字符串文字)。 如果主机应用程序不是 Outlook Web App, 则访问此属性将导致未定义。 Outlook Web App 具有三个视图 (OneColumn-当屏幕变窄、TwoColumns 时显示当屏幕较宽时显示, 而在屏幕为宽时显示为 ThreeColumns) 与屏幕和窗口的宽度相对应, 以及列数可以显示的。
 
@@ -411,9 +411,9 @@ items:
     summary: |-
       获取此电子邮件帐户的 Exchange Web Services (EWS) 终点的 URL。 仅限阅读模式。
 
-      您的应用程序必须在其清单中指定了 ReadItem 权限, 才能在阅读模式下调用 mailbox.ewsurl 成员。
+      您的应用程序必须在其清单中指定了 ReadItem 权限, 才能在阅读模式下调用 Mailbox.ewsurl 成员。
 
-      在撰写模式下, 您必须先调用 saveAsync 方法, 然后才能使用 mailbox.ewsurl 成员。 您的应用程序必须具有 ReadWriteItem 权限, 才能调用 saveAsync 方法。
+      在撰写模式下, 您必须先调用 saveAsync 方法, 然后才能使用 Mailbox.ewsurl 成员。 您的应用程序必须具有 ReadWriteItem 权限, 才能调用 saveAsync 方法。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -421,9 +421,9 @@ items:
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
 
-      远程服务可使用 mailbox.ewsurl 值对用户邮箱进行 EWS 调用。 例如, 可以创建远程服务以[从所选项目中获取附件](https://docs.microsoft.com/outlook/add-ins/get-attachments-of-an-outlook-item)<!-- -->.
+      远程服务可使用 Mailbox.ewsurl 值对用户邮箱进行 EWS 调用。 例如, 可以创建远程服务以[从所选项目中获取附件](https://docs.microsoft.com/outlook/add-ins/get-attachments-of-an-outlook-item)<!-- -->.
 
-      **注意**: outlook for iOS 或 outlook for Android 中不支持此成员。
+      **注意**: Outlook for IOS 或 Outlook for Android 中不支持此成员。
     name: ewsUrl
     fullName: ewsUrl
     langs:
