--- a/docs/docs-ref-autogen/outlook_1_5/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.mailbox.yml
@@ -569,7 +569,7 @@ items:
           type:
             - '(asyncResult: Office.AsyncResult<string>) => void'
         - id: userContext
-          description: 可选。 传递给异步方法的任何状态数据。\|
+          description: 可选。 传递给异步方法的任何状态数据。
           type:
             - any
   - uid: Outlook_1_5.Office.Mailbox.makeEwsRequestAsync
