commit translated contents

--- a/docs/docs-ref-autogen/office/office.error.yml
+++ b/docs/docs-ref-autogen/office/office.error.yml
@@ -14,7 +14,7 @@ items:
       - office.Office.Error.message
       - office.Office.Error.name
   - uid: office.Office.Error.code
-    summary: 获取错误的数字代码。
+    summary: '获取错误的数字代码。 有关错误代码的列表, 请参阅适用[于 Office 的 JAVASCRIPT API 错误代码](https://docs.microsoft.com/office/dev/add-ins/reference/javascript-api-for-office-error-codes)<!-- -->.'
     name: code
     fullName: code
     langs:
