--- a/docs/docs-ref-autogen/visio/visio.shapeview.yml
+++ b/docs/docs-ref-autogen/visio/visio.shapeview.yml
@@ -49,7 +49,7 @@ items:
           Visio.run(session, function (ctx) {
               var activePage = ctx.document.getActivePage();
               var shape = activePage.shapes.getItem(0);
-              var overlayId=shape.view.addOverlay("Image", "Visio Online", "Center", "Center", 50, 50);
+              var overlayId=shape.view.addOverlay("Image", "Visio Online", "Center", "Middle", 50, 50);
               return ctx.sync();
           }).catch(function(error) {
               console.log("Error: " + error);
@@ -178,7 +178,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Visio.ShapeView`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeView`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeView`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
