--- a/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
@@ -28,6 +28,8 @@ items:
       - outlook.Office.AppointmentCompose.getAttachmentsAsync_1
       - outlook.Office.AppointmentCompose.getInitializationContextAsync
       - outlook.Office.AppointmentCompose.getInitializationContextAsync_1
+      - outlook.Office.AppointmentCompose.getItemIdAsync
+      - outlook.Office.AppointmentCompose.getItemIdAsync_1
       - outlook.Office.AppointmentCompose.getSelectedDataAsync
       - outlook.Office.AppointmentCompose.getSelectedDataAsync_1
       - outlook.Office.AppointmentCompose.loadCustomPropertiesAsync
@@ -638,6 +640,76 @@ items:
       parameters:
         - id: callback
           description: '可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功时, 初始化数据在 asyncResult 属性中以字符串的形式提供。 如果没有初始化上下文, asyncResult 对象将包含一个 Error 对象, 其 code 属性设置为 9020, 其 name 属性设置为 GenericResponseError。'
+          type:
+            - '(asyncResult: Office.AsyncResult<string>) => void'
+  - uid: outlook.Office.AppointmentCompose.getItemIdAsync
+    summary: |-
+      异步获取已保存项的 ID。
+
+      调用此方法时, 此方法通过回调方法返回项 ID。
+
+      **注意**: 如果你的外接程序`getItemIdAsync`对撰写模式中的项 (例如, 获取`itemId`与 EWS 或 REST API 一起使用) 调用, 请注意, 当 Outlook 处于缓存模式下时, 可能需要一段时间才能将项目同步到服务器。 在同步项目之前, 无法识别`itemId`该项目并使用它将返回错误。
+
+      \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 约会组织者
+
+      **错误**:
+
+      - `ItemNotSaved`<!-- -->: 在保存项目之前无法检索该 id。
+    name: 'getItemIdAsync(options, callback)'
+    fullName: 'getItemIdAsync(options, callback)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getItemIdAsync(options: Office.AsyncContextOptions, callback: (asyncResult: Office.AsyncResult<string>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: options
+          description: '包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
+          type:
+            - Office.AsyncContextOptions
+        - id: callback
+          description: '方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。'
+          type:
+            - '(asyncResult: Office.AsyncResult<string>) => void'
+  - uid: outlook.Office.AppointmentCompose.getItemIdAsync_1
+    summary: |-
+      异步获取已保存项的 ID。
+
+      调用此方法时, 此方法通过回调方法返回项 ID。
+
+      **注意**: 如果你的外接程序`getItemIdAsync`对撰写模式中的项 (例如, 获取`itemId`与 EWS 或 REST API 一起使用) 调用, 请注意, 当 Outlook 处于缓存模式下时, 可能需要一段时间才能将项目同步到服务器。 在同步项目之前, 无法识别`itemId`该项目并使用它将返回错误。
+
+      \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 约会组织者
+
+      **错误**:
+
+      - `ItemNotSaved`<!-- -->: 在保存项目之前无法检索该 id。
+    name: getItemIdAsync(callback)
+    fullName: getItemIdAsync(callback)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getItemIdAsync(callback: (asyncResult: Office.AsyncResult<string>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: callback
+          description: '方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。'
           type:
             - '(asyncResult: Office.AsyncResult<string>) => void'
   - uid: outlook.Office.AppointmentCompose.getSelectedDataAsync
