--- a/docs/docs-ref-autogen/office/office.error.yml
+++ b/docs/docs-ref-autogen/office/office.error.yml
@@ -1,8 +1,8 @@
 ### YamlMime:UniversalReference
 items:
   - uid: office.Office.Error
-    summary: <span data-ttu-id="f8708-101">提供有关异步数据操作期间发生的错误的具体信息。</span><span class="sxs-lookup"><span data-stu-id="f8708-101">Provides specific information about an error that occurred during an asynchronous data operation.</span></span>
-    remarks: '<span data-ttu-id="f8708-102">Error 对象是从作为异步数据操作的 callback 参数传递的函数中返回的 AsyncResult 对象 (例如 Document 对象的`setSelectedDataAsync`方法) 访问的。</span><span class="sxs-lookup"><span data-stu-id="f8708-102">The Error object is accessed from the AsyncResult object that is returned in the function passed as the callback argument of an asynchronous data operation, such as the `setSelectedDataAsync` method of the Document object.</span></span>'
+    summary: <span data-ttu-id="958bc-101">提供有关异步数据操作期间发生的错误的具体信息。</span><span class="sxs-lookup"><span data-stu-id="958bc-101">Provides specific information about an error that occurred during an asynchronous data operation.</span></span>
+    remarks: '<span data-ttu-id="958bc-102">Error 对象是从作为异步数据操作的 callback 参数传递的函数中返回的 AsyncResult 对象 (例如 Document 对象的`setSelectedDataAsync`方法) 访问的。</span><span class="sxs-lookup"><span data-stu-id="958bc-102">The Error object is accessed from the AsyncResult object that is returned in the function passed as the callback argument of an asynchronous data operation, such as the `setSelectedDataAsync` method of the Document object.</span></span>'
     name: Office.Error
     fullName: Office.Error
     langs:
@@ -14,7 +14,7 @@ items:
       - office.Office.Error.message
       - office.Office.Error.name
   - uid: office.Office.Error.code
-    summary: <span data-ttu-id="f8708-103">获取错误的数字代码。</span><span class="sxs-lookup"><span data-stu-id="f8708-103">Gets the numeric code of the error.</span></span>
+    summary: '<span data-ttu-id="958bc-103">获取错误的数字代码。</span><span class="sxs-lookup"><span data-stu-id="958bc-103">Gets the numeric code of the error.</span></span> <span data-ttu-id="958bc-104">有关错误代码的列表, 请参阅适用[于 Office 的 JAVASCRIPT API 错误代码](https://docs.microsoft.com/office/dev/add-ins/reference/javascript-api-for-office-error-codes)</span><span class="sxs-lookup"><span data-stu-id="958bc-104">For a list of error codes, see [JavaScript API for Office error codes](https://docs.microsoft.com/office/dev/add-ins/reference/javascript-api-for-office-error-codes)</span></span><!-- --><span data-ttu-id="958bc-105">.</span><span class="sxs-lookup"><span data-stu-id="958bc-105"></span></span>'
     name: code
     fullName: code
     langs:
@@ -28,7 +28,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="f8708-104">示例</span><span class="sxs-lookup"><span data-stu-id="f8708-104">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="958bc-106">示例</span><span class="sxs-lookup"><span data-stu-id="958bc-106">Examples</span></span>
 
           ```javascript
           // To cause an error to be thrown, select a table or a matrix, and then call the setText function.
@@ -47,7 +47,7 @@ items:
           }
           ```
   - uid: office.Office.Error.message
-    summary: <span data-ttu-id="f8708-105">获取错误的名称。</span><span class="sxs-lookup"><span data-stu-id="f8708-105">Gets the name of the error.</span></span>
+    summary: <span data-ttu-id="958bc-107">获取错误的名称。</span><span class="sxs-lookup"><span data-stu-id="958bc-107">Gets the name of the error.</span></span>
     name: message
     fullName: message
     langs:
@@ -61,7 +61,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="f8708-106">示例</span><span class="sxs-lookup"><span data-stu-id="f8708-106">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="958bc-108">示例</span><span class="sxs-lookup"><span data-stu-id="958bc-108">Examples</span></span>
 
           ```javascript
           // To cause an error to be thrown, select a table or a matrix, and then call the setText function.
@@ -80,7 +80,7 @@ items:
           }
           ```
   - uid: office.Office.Error.name
-    summary: <span data-ttu-id="f8708-107">获取错误的详细描述。</span><span class="sxs-lookup"><span data-stu-id="f8708-107">Gets a detailed description of the error.</span></span>
+    summary: <span data-ttu-id="958bc-109">获取错误的详细描述。</span><span class="sxs-lookup"><span data-stu-id="958bc-109">Gets a detailed description of the error.</span></span>
     name: name
     fullName: name
     langs:
@@ -94,7 +94,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="f8708-108">示例</span><span class="sxs-lookup"><span data-stu-id="f8708-108">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="958bc-110">示例</span><span class="sxs-lookup"><span data-stu-id="958bc-110">Examples</span></span>
 
           ```javascript
           // To cause an error to be thrown, select a table or a matrix, and then call the setText function.
