commit bilingual contents

--- a/docs/docs-ref-autogen/excel_release/excel.datavalidationrule.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.datavalidationrule.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel_release.Excel.DataValidationRule
     summary: |-
-      <span data-ttu-id="b89b2-101">数据有效性规则包含不同类型的数据验证。</span><span class="sxs-lookup"><span data-stu-id="b89b2-101">Data validation rule contains different types of data validation.</span></span> <span data-ttu-id="b89b2-102">一次只能根据 DataValidationType 使用其中一种方法。</span><span class="sxs-lookup"><span data-stu-id="b89b2-102">You can only use one of them at a time according the Excel.DataValidationType.</span></span>
+      <span data-ttu-id="26ee7-101">数据有效性规则包含不同类型的数据验证。</span><span class="sxs-lookup"><span data-stu-id="26ee7-101">Data validation rule contains different types of data validation.</span></span> <span data-ttu-id="26ee7-102">一次只能根据 DataValidationType 使用其中一种方法。</span><span class="sxs-lookup"><span data-stu-id="26ee7-102">You can only use one of them at a time according the Excel.DataValidationType.</span></span>
 
-      <span data-ttu-id="b89b2-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b89b2-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="26ee7-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26ee7-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.DataValidationRule
     fullName: Excel.DataValidationRule
     langs:
@@ -21,9 +21,9 @@ items:
       - excel_release.Excel.DataValidationRule.wholeNumber
   - uid: excel_release.Excel.DataValidationRule.custom
     summary: |-
-      <span data-ttu-id="b89b2-104">自定义数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="b89b2-104">Custom data validation criteria.</span></span>
+      <span data-ttu-id="26ee7-104">自定义数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="26ee7-104">Custom data validation criteria.</span></span>
 
-      <span data-ttu-id="b89b2-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b89b2-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="26ee7-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26ee7-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: custom
     fullName: custom
     langs:
@@ -36,9 +36,9 @@ items:
           - excel.Excel.CustomDataValidation
   - uid: excel_release.Excel.DataValidationRule.date
     summary: |-
-      <span data-ttu-id="b89b2-106">日期数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="b89b2-106">Date data validation criteria.</span></span>
+      <span data-ttu-id="26ee7-106">日期数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="26ee7-106">Date data validation criteria.</span></span>
 
-      <span data-ttu-id="b89b2-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b89b2-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="26ee7-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26ee7-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: date
     fullName: date
     langs:
@@ -51,9 +51,9 @@ items:
           - excel.Excel.DateTimeDataValidation
   - uid: excel_release.Excel.DataValidationRule.decimal
     summary: |-
-      <span data-ttu-id="b89b2-108">小数数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="b89b2-108">Decimal data validation criteria.</span></span>
+      <span data-ttu-id="26ee7-108">小数数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="26ee7-108">Decimal data validation criteria.</span></span>
 
-      <span data-ttu-id="b89b2-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b89b2-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="26ee7-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26ee7-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: decimal
     fullName: decimal
     langs:
@@ -66,9 +66,9 @@ items:
           - excel.Excel.BasicDataValidation
   - uid: excel_release.Excel.DataValidationRule.list
     summary: |-
-      <span data-ttu-id="b89b2-110">列表数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="b89b2-110">List data validation criteria.</span></span>
+      <span data-ttu-id="26ee7-110">列表数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="26ee7-110">List data validation criteria.</span></span>
 
-      <span data-ttu-id="b89b2-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b89b2-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="26ee7-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26ee7-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: list
     fullName: list
     langs:
@@ -82,7 +82,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="b89b2-112">示例</span><span class="sxs-lookup"><span data-stu-id="b89b2-112">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="26ee7-112">示例</span><span class="sxs-lookup"><span data-stu-id="26ee7-112">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -99,7 +99,7 @@ items:
               let approvedListRule = {
                   list: {
                       inCellDropDown: true,
-                      source: '=Names!$A$1:$A$3'
+                      source: nameSourceRange
                   }
               };
               nameRange.dataValidation.rule = approvedListRule;
@@ -109,9 +109,9 @@ items:
           ```
   - uid: excel_release.Excel.DataValidationRule.textLength
     summary: |-
-      <span data-ttu-id="b89b2-113">TextLength 数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="b89b2-113">TextLength data validation criteria.</span></span>
+      <span data-ttu-id="26ee7-113">TextLength 数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="26ee7-113">TextLength data validation criteria.</span></span>
 
-      <span data-ttu-id="b89b2-114">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b89b2-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="26ee7-114">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26ee7-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: textLength
     fullName: textLength
     langs:
@@ -124,9 +124,9 @@ items:
           - excel.Excel.BasicDataValidation
   - uid: excel_release.Excel.DataValidationRule.time
     summary: |-
-      <span data-ttu-id="b89b2-115">时间数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="b89b2-115">Time data validation criteria.</span></span>
+      <span data-ttu-id="26ee7-115">时间数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="26ee7-115">Time data validation criteria.</span></span>
 
-      <span data-ttu-id="b89b2-116">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b89b2-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="26ee7-116">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26ee7-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: time
     fullName: time
     langs:
@@ -139,9 +139,9 @@ items:
           - excel.Excel.DateTimeDataValidation
   - uid: excel_release.Excel.DataValidationRule.wholeNumber
     summary: |-
-      <span data-ttu-id="b89b2-117">WholeNumber 数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="b89b2-117">WholeNumber data validation criteria.</span></span>
+      <span data-ttu-id="26ee7-117">WholeNumber 数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="26ee7-117">WholeNumber data validation criteria.</span></span>
 
-      <span data-ttu-id="b89b2-118">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b89b2-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="26ee7-118">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26ee7-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: wholeNumber
     fullName: wholeNumber
     langs:
@@ -155,7 +155,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="b89b2-119">示例</span><span class="sxs-lookup"><span data-stu-id="b89b2-119">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="26ee7-119">示例</span><span class="sxs-lookup"><span data-stu-id="26ee7-119">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
