commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.pivotfield.yml
+++ b/docs/docs-ref-autogen/excel/excel.pivotfield.yml
@@ -2,7 +2,7 @@
 items:
   - uid: excel.Excel.PivotField
     summary: |-
-      表示 Excel 透视字段。
+      代表 PivotHierarchy 中的单个数据透视字段。
 
       \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PivotField
@@ -58,7 +58,7 @@ items:
           - string
   - uid: excel.Excel.PivotField.items
     summary: |-
-      返回与 PivotField 相关联的 PivotFields。
+      返回构成透视字段的 PivotItems。
 
       \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: items
@@ -302,7 +302,7 @@ items:
         type:
           - excel.Excel.Subtotals
   - uid: excel.Excel.PivotField.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel。透视字段对象是 API 对象, 但`toJSON`方法返回一个简单的 JavaScript 对象 (类型为`Excel.Interfaces.PivotFieldData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel. 透视字段对象是 API 对象, 但`toJSON`方法返回一个简单的 JavaScript 对象 (类型为`Excel.Interfaces.PivotFieldData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
     name: toJSON()
     fullName: toJSON()
     langs:
