--- a/docs/docs-ref-autogen/excel/excel.pivotfieldcollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.pivotfieldcollection.yml
@@ -2,7 +2,7 @@
 items:
   - uid: excel.Excel.PivotFieldCollection
     summary: |-
-      表示属于工作簿或工作表的所有 PivotTable 对象的集合。
+      PivotHierarchy 中的透视字段对象的集合。
 
       \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PivotFieldCollection
@@ -37,7 +37,7 @@ items:
           - RequestContext
   - uid: excel.Excel.PivotFieldCollection.getCount
     summary: |-
-      获取集合中的透视层级结构的数量。
+      获取集合中的数据透视字段数。
 
       \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
@@ -53,7 +53,7 @@ items:
         description: ''
   - uid: excel.Excel.PivotFieldCollection.getItem
     summary: |-
-      按名称或 ID 获取 PivotHierarchy。
+      按其名称或 id 获取透视字段。
 
       \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(name)
@@ -74,7 +74,7 @@ items:
             - string
   - uid: excel.Excel.PivotFieldCollection.getItemOrNullObject
     summary: |-
-      按名称获取 PivotHierarchy。 如果 PivotHierarchy 不存在，则返回 Null 对象。
+      按名称获取透视字段。 如果透视字段不存在, 则将返回 null 对象。
 
       \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemOrNullObject(name)
@@ -90,7 +90,7 @@ items:
         description: ''
       parameters:
         - id: name
-          description: 要检索的 PivotHierarchy 的名称。
+          description: 要检索的透视字段的名称。
           type:
             - string
   - uid: excel.Excel.PivotFieldCollection.items
@@ -114,7 +114,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Excel.PivotFieldCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotFieldCollection`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotFieldCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
