--- a/docs/docs-ref-autogen/excel_release/excel.databarconditionalformat.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.databarconditionalformat.yml
@@ -111,7 +111,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Excel.DataBarConditionalFormat`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.DataBarConditionalFormat`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.DataBarConditionalFormat`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -166,7 +166,7 @@ items:
             - '{ select?: string; expand?: string; }'
   - uid: excel_release.Excel.DataBarConditionalFormat.lowerBoundRule
     summary: |-
-      构成数据栏的下限（以及如何计算，如果适用）的规则。
+      构成数据栏的下限（以及如何计算，如果适用）的规则。 必须`ConditionalDataBarRule`将该对象设置为 JSON 对象 (使用`x.lowerBoundRule = {...}` , 而不是`x.lowerBoundRule.formula = ...`<!-- -->).
 
       \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lowerBoundRule
@@ -283,7 +283,7 @@ items:
         description: ''
   - uid: excel_release.Excel.DataBarConditionalFormat.upperBoundRule
     summary: |-
-      构成数据栏的上限（以及如何计算，如果适用）的规则。
+      构成数据栏的上限（以及如何计算，如果适用）的规则。 必须`ConditionalDataBarRule`将该对象设置为 JSON 对象 (使用`x.upperBoundRule = {...}` , 而不是`x.upperBoundRule.formula = ...`<!-- -->).
 
       \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: upperBoundRule
