--- a/docs/docs-ref-autogen/visio/visio.document.yml
+++ b/docs/docs-ref-autogen/visio/visio.document.yml
@@ -84,7 +84,7 @@ items:
           Visio.run(session, function (ctx) {
               var document = ctx.document;
               var activePage = document.getActivePage();
-              activePage.load();
+              activePage.load("name");
               return ctx.sync().then(function () {
                   console.log("pageName: " +activePage.name);
               });   
@@ -104,7 +104,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Visio.Document`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Document`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Document`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
