--- a/docs/docs-ref-autogen/visio/visio.hyperlinkcollection.yml
+++ b/docs/docs-ref-autogen/visio/visio.hyperlinkcollection.yml
@@ -92,7 +92,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Visio.HyperlinkCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.HyperlinkCollection`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.HyperlinkCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
 
       #### <a name="examples"></a>示例
 
@@ -102,10 +102,9 @@ items:
           var shapeName = "Manager Belt";
           var shape = activePage.shapes.getItem(shapeName);
           var hyperlinks = shape.hyperlinks;
-          shapeHyperlinks.load();
+          shapeHyperlinks.load(["description", "address", "subAddress"]);
               ctx.sync().then(function () {
-                  for(var i=0; i<shapeHyperlinks.items.length;i++)
-                  {
+                  for (var i = 0; i < shapeHyperlinks.items.length; i++) {
                       var hyperlink = shapeHyperlinks.items[i];
                       console.log(
                           "Description:"+hyperlink.description +"Address:"+hyperlink.address +"SubAddress:  " + 
