--- a/docs/docs-ref-autogen/visio/visio.shape.yml
+++ b/docs/docs-ref-autogen/visio/visio.shape.yml
@@ -113,42 +113,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Visio.Shape`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Shape`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
-
-      #### <a name="examples"></a>示例
-
-      ```javascript
-      Visio.run(session, function (ctx) {
-          var activePage = ctx.document.getActivePage();
-          var shapeName = "Sample Name";
-          var shape = activePage.shapes.getItem(shapeName);
-          shape.load();
-          return ctx.sync().then(function () {
-              console.log(shape.name );
-              console.log(shape.id );
-              console.log(shape.Text );
-              console.log(shape.Select );
-          });
-      }).catch(function(error) {
-          console.log("Error: " + error);
-          if (error instanceof OfficeExtension.Error) {
-              console.log("Debug info: " + JSON.stringify(error.debugInfo));
-          }
-      });
-      ```
-      ```javascript
-      Visio.run(session, function (ctx) {
-          var activePage = ctx.document.getActivePage();
-          var shape = activePage.shapes.getItem(0);
-          shape.view.highlight = { color: "#E7E7E7", width: 100 };
-          return ctx.sync();
-      }).catch(function(error) {
-          console.log("Error: " + error);
-          if (error instanceof OfficeExtension.Error) {
-              console.log("Debug info: " + JSON.stringify(error.debugInfo));
-          }
-      });
-      ```
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Shape`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -177,7 +142,43 @@ items:
       return:
         type:
           - Visio.Shape
-        description: ''
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```javascript
+          Visio.run(session, function (ctx) {
+              var activePage = ctx.document.getActivePage();
+              var shapeName = "Sample Name";
+              var shape = activePage.shapes.getItem(shapeName);
+              shape.load(["name", "id", "text", "select"]);
+              return ctx.sync().then(function () {
+                  console.log(shape.name);
+                  console.log(shape.id);
+                  console.log(shape.text);
+                  console.log(shape.select);
+              });
+          }).catch(function(error) {
+              console.log("Error: " + error);
+              if (error instanceof OfficeExtension.Error) {
+                  console.log("Debug info: " + JSON.stringify(error.debugInfo));
+              }
+          });
+          ```
+          ```javascript
+          Visio.run(session, function (ctx) {
+              var activePage = ctx.document.getActivePage();
+              var shape = activePage.shapes.getItem(0);
+              shape.view.highlight = { color: "#E7E7E7", width: 100 };
+              return ctx.sync();
+          }).catch(function(error) {
+              console.log("Error: " + error);
+              if (error instanceof OfficeExtension.Error) {
+                  console.log("Debug info: " + JSON.stringify(error.debugInfo));
+              }
+          });
+          ```
       parameters:
         - id: propertyNames
           description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
