--- a/docs/docs-ref-autogen/visio/visio.shapedataitem.yml
+++ b/docs/docs-ref-autogen/visio/visio.shapedataitem.yml
@@ -89,7 +89,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Visio.ShapeDataItem`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeDataItem`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeDataItem`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
 
       #### <a name="examples"></a>示例
 
@@ -98,7 +98,7 @@ items:
           var activePage = ctx.document.getActivePage();
           var shape = activePage.shapes.getItem(0);
           var shapeDataItem = shape.shapeDataItems.getItem(0);
-          shapeDataItem.load();
+          shapeDataItem.load(["label", "value"]);
               return ctx.sync().then(function() {
                   console.log(shapeDataItem.label);
                   console.log(shapeDataItem.value);
